# gcp-auth

./: .travis.yml  README.md
gcp-auth/: CMakeLists.txt  TODOS  config.h.in  gcp_auth.pc.in
gcp-auth/cmake/: FindCriterion.cmake  FindJSON-C.cmake
gcp-auth/include/: asprintf-compat.h  gcp-access-token.h  gcp-credentials.h  openssl-compat.h
gcp-auth/src/: CMakeLists.txt  asprintf-compat.c  config.h.in  gcp-access-token.c  gcp-auth.c  gcp-auth.h  gcp-credentials.c  gcp-credentials.h  gcp-jwt.c  gcp-jwt.h  goauth.c  jwt.c  jwt.h
gcp-auth/test/: CMakeLists.txt  test_asprintf_compat.c  test_gcp_credentials.c
gcp-json/: CMakeLists.txt
gcp-json/cmake/: FindJSON-C.cmake
gcp-json/src/: CMakeLists.txt  gcp-credentials.c  gcp-credentials.h  gcp-jwt.c  goauth.c  jwt.c  jwt.h
gcp-json/test/: CMakeLists.txt  test_gcp_jwt.c  test_jwt.c
